--- a/docs/home/css/style.css
+++ b/docs/home/css/style.css
@@ -56,7 +56,7 @@ a[href].text-border {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100%;
+    height: 100%;
     --size: min(22.2vw, 10vh);
 }
 
@@ -93,6 +93,7 @@ x-clock::part(seconds)::before {
 
 horizontal-pages {
     width: 100%;
+    height: 100%;
 }
 
 @media (hover: none) {
@@ -103,7 +104,7 @@ horizontal-pages {
 
 #feed-progress {
     position: relative;
-    height: 1vh;
+    height: 5px;
     width: 100%;
 }
 
